Implement i18n, theming, and refactorings
- Added internationalization support using `i18next` for English and Chinese languages, enhancing app accessibility and user experience across different locales.
- Integrated Redux for global state management, particularly for storing user authentication state and theme preferences, facilitating app-wide state control.
- Introduced theming capability allowing users to toggle between light and dark themes, improving visual comfort according to user preference.
- Included new UI component `FloatLabel` for better UX in setting toggles.
- Refactored the project list to improve project manageability for administrators, including deleting projects and adjusting project presentation.
- Improved various UI components (e.g., `Footer`, `Header`) for consistency, readability, and support for new features like language and theme switching.
- Updated font family and styles across the application for a more modern and cohesive look.
- Adjustments made to ensure compatibility and responsiveness across devices of varying sizes.

These changes collectively enhance the app’s internationalization, state management, user interface, and overall user experience.

--- a/public/theme.css
+++ b/public/theme.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #43291b;
-  --secondary-color: #3f3f3f;
+  --secondary-color: #666666;
   --border-color: #e5e5e5;
   --border-hover-color: #7f7f7f;
 
