--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -66,14 +66,78 @@
     }
 
     &.right_action {
-      > button {
+      > :global(.actions-container) {
+        @include flexbox(row, center, center);
+        position: relative;
         height: 100%;
-        width: 60px;
-        font-size: 1.2rem;
-        background-color: #00000000;
-        color: var(--text-color);
-        border: none;
-        cursor: pointer;
+
+        &:global(.active) {
+          > button {
+            border-top: 1px solid var(--border-color);
+            border-left: 1px solid var(--border-color);
+            background-color: var(--background-secondary-color);
+          }
+        }
+
+        // setting button (toggle actions block)
+        > button {
+          height: 100%;
+          width: 60px;
+          font-size: 1.2rem;
+          background-color: var(--background-color);
+          color: var(--text-color);
+          border: none;
+          border-top: 0px solid var(--background-color);
+          border-left: 0px solid var(--background-color);
+          cursor: pointer;
+          border-radius: 24px 0 0 0;
+          -webkit-border-radius: 24px 0 0 0;
+          -moz-border-radius: 24px 0 0 0;
+          -ms-border-radius: 24px 0 0 0;
+          -o-border-radius: 24px 0 0 0;
+        }
+
+        // actions block
+        > :global(.actions) {
+          @include flexbox(column, center, center);
+          position: absolute;
+          top: var(--header-height);
+          right: -1px;
+          opacity: 0;
+          background-color: var(--background-secondary-color);
+          border-left: 1px solid var(--background-color);
+          border-bottom: 1px solid var(--background-color);
+
+          &:global(.active) {
+            opacity: 1;
+            border-left: 1px solid var(--border-color);
+            border-bottom: 1px solid var(--border-color);
+
+            > button {
+              height: 60px;
+            }
+          }
+
+          > button {
+            position: relative;
+            height: 30px;
+            width: 60px;
+            font-size: 1.2rem;
+            background-color: #00000000;
+            color: var(--text-color);
+            border: none;
+            cursor: pointer;
+
+            &:hover > :global(.label) {
+              opacity: 1;
+            }
+          }
+          border-radius: 0 0 0 24px;
+          -webkit-border-radius: 0 0 0 24px;
+          -moz-border-radius: 0 0 0 24px;
+          -ms-border-radius: 0 0 0 24px;
+          -o-border-radius: 0 0 0 24px;
+        }
       }
     }
   }
