--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,9 @@
   font-weight: 400;
   font-style: normal;
   color: var(--text-color);
+  font-family: 'Outfit', 'Noto Sans TC', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
 
   transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
   -webkit-transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
@@ -21,6 +24,19 @@ h6 {
   font-weight: 700;
 }
 
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+
 html {
   height: 100%;
   width: 100%;
@@ -32,17 +48,17 @@ body {
   width: 100vw;
   margin: 0;
   background-color: var(--background-color);
-  font-family: 'Noto Sans TC', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
+  font-family: 'Outfit', 'Noto Sans TC', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Source Code Pro', source-code-pro, Menlo, Monaco, Consolas,
+    'Courier New', monospace;
 }
 
 li {
@@ -63,6 +79,10 @@ a {
   }
 }
 
+p {
+  margin: 0;
+}
+
 input[type='text'],
 textarea {
   outline: none;
@@ -75,4 +95,14 @@ textarea {
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
+}
+
+:root {
+  --header-height: 60px;
+
+  --space: 12px;
+  --space-2x: 24px;
+  --space-3x: 36px;
+  --space-4x: 48px;
+  --space-8x: 96px;
 }
