--- a/src/pages/Project/Project.module.scss
+++ b/src/pages/Project/Project.module.scss
@@ -54,10 +54,6 @@
           margin-bottom: 0;
         }
 
-        &.private {
-          // border: 1px solid var(--border-color);
-        }
-
         > a {
           @include flexbox(column, start, start);
           padding: 12px 15px;
@@ -80,6 +76,7 @@
             }
           }
           > p {
+            text-align: left;
             margin: 0;
             font-size: 0.8rem;
             color: #5f5f5f;
@@ -93,18 +90,17 @@
         > .deleteButton {
           @include flexbox(row, center, center);
           position: absolute;
-          padding: 6px 9px;
           top: 12px;
           right: 12px;
           cursor: pointer;
           background-color: var(--background-secondary-color);
           border: 1px solid var(--border-color);
           color: var(--text-secondary-color);
-          border-radius: 9px;
-          -webkit-border-radius: 9px;
-          -moz-border-radius: 9px;
-          -ms-border-radius: 9px;
-          -o-border-radius: 9px;
+          border-radius: 12px;
+          -webkit-border-radius: 12px;
+          -moz-border-radius: 12px;
+          -ms-border-radius: 12px;
+          -o-border-radius: 12px;
         }
 
         border-radius: 18px;
@@ -118,19 +114,41 @@
 
   > .createProject {
     @include flexbox(row, center, center);
-    margin-bottom: 12px;
-    padding: 12px 18px;
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    height: 60px;
+    width: 60px;
+    padding: 0;
     border: 1px solid var(--border-color);
+    font-size: 1.3rem;
+    background-color: var(--background-color);
 
-    > a {
-      font-style: normal;
-      color: inherit;
+    @include respond-to('phone') {
+      right: 12px;
     }
-    border-radius: 18px;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    -ms-border-radius: 18px;
-    -o-border-radius: 18px;
+
+    &:hover {
+      background-color: var(--background-secondary-color);
+
+      > svg > path {
+        color: var(--link-hover-color);
+      }
+    }
+
+    > svg {
+      margin-top: -2px;
+
+      > path {
+        color: var(--text-secondary-color);
+      }
+    }
+
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
   }
 }
 
@@ -146,6 +164,7 @@
   @include respond-to('phone') {
     padding: 12px;
     padding-top: 72px;
+    padding-bottom: 0;
   }
   @include respond-to('desktop') {
     height: 100%;
@@ -160,6 +179,12 @@
     height: 100%;
     max-height: 100%;
     max-width: 977px;
+
+    @include respond-to('phone-landscape') {
+      @include flexbox(row-reverse, start, center);
+      height: min-content;
+      max-height: 100%;
+    }
 
     @include respond-to('desktop') {
       @include flexbox(row-reverse, start, center);
@@ -206,6 +231,11 @@
         display: none;
       }
 
+      @include respond-to('phone-landscape') {
+        height: fit-content;
+        max-height: 100%;
+        width: 60%;
+      }
       @include respond-to('desktop') {
         width: 60%;
         padding: 12px;
@@ -505,10 +535,17 @@
     // 媒體資訊區塊
     > .mediaInfo {
       @include flexbox(column, start, start);
-      padding: 18px 12px;
+      padding: 18px 12px 24px 12px;
       width: 100%;
+      height: 100%;
       max-height: 50%;
+      overflow-y: auto;
 
+      @include respond-to('phone-landscape') {
+        height: 100%;
+        width: 40%;
+        max-height: none;
+      }
       @include respond-to('desktop') {
         @include flexbox(column, space-between, start);
         width: 40%;
@@ -519,7 +556,7 @@
 
       > .mediaInfoHeader {
         padding: 0 6px;
-        > h2 {
+        > h3 {
           text-align: left;
           margin: 0;
         }
@@ -533,10 +570,13 @@
       > .details {
         @include flexbox(column, space-between);
         width: 100%;
+        min-height: fit-content;
+        max-height: 100%;
         padding: 12px 15px;
         margin-top: 24px;
         border: 1px solid var(--border-color);
-        overflow-y: scroll;
+        overflow: hidden;
+        overflow-y: auto;
 
         @include respond-to('desktop') {
           border-radius: 12px;
