--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -40,6 +40,7 @@
       width: 60px;
       height: 100%;
       font-size: 1rem;
+      @include float-label;
 
       &:global(.active) {
         border-bottom: 3px solid var(--link-hover-color);
@@ -73,10 +74,14 @@
 
         &:global(.active) {
           > button {
-            border-top: 1px solid var(--border-color);
-            border-left: 1px solid var(--border-color);
+            border: 1px solid var(--border-color);
             background-color: var(--background-secondary-color);
           }
+          transform: translateX(-12px) translateY(12px);
+          -webkit-transform: translateX(-12px) translateY(12px);
+          -moz-transform: translateX(-12px) translateY(12px);
+          -ms-transform: translateX(-12px) translateY(12px);
+          -o-transform: translateX(-12px) translateY(12px);
         }
 
         // setting button (toggle actions block)
@@ -87,14 +92,13 @@
           background-color: var(--background-color);
           color: var(--text-color);
           border: none;
-          border-top: 0px solid var(--background-color);
-          border-left: 0px solid var(--background-color);
+          border: 0px solid var(--background-color);
           cursor: pointer;
-          border-radius: 24px 0 0 0;
-          -webkit-border-radius: 24px 0 0 0;
-          -moz-border-radius: 24px 0 0 0;
-          -ms-border-radius: 24px 0 0 0;
-          -o-border-radius: 24px 0 0 0;
+          border-radius: 24px 24px 0 0;
+          -webkit-border-radius: 24px 24px 0 0;
+          -moz-border-radius: 24px 24px 0 0;
+          -ms-border-radius: 24px 24px 0 0;
+          -o-border-radius: 24px 24px 0 0;
         }
 
         // actions block
@@ -107,11 +111,15 @@
           background-color: var(--background-secondary-color);
           border-left: 1px solid var(--background-color);
           border-bottom: 1px solid var(--background-color);
+          pointer-events: none;
+          user-select: none;
 
           &:global(.active) {
             opacity: 1;
             border-left: 1px solid var(--border-color);
             border-bottom: 1px solid var(--border-color);
+            pointer-events: auto;
+            user-select: auto;
 
             > button {
               height: 60px;
@@ -119,7 +127,6 @@
           }
 
           > button {
-            position: relative;
             height: 30px;
             width: 60px;
             font-size: 1.2rem;
@@ -128,15 +135,13 @@
             border: none;
             cursor: pointer;
 
-            &:hover > :global(.label) {
-              opacity: 1;
-            }
+            @include float-label;
           }
-          border-radius: 0 0 0 24px;
-          -webkit-border-radius: 0 0 0 24px;
-          -moz-border-radius: 0 0 0 24px;
-          -ms-border-radius: 0 0 0 24px;
-          -o-border-radius: 0 0 0 24px;
+          border-radius: 0 0 24px 24px;
+          -webkit-border-radius: 0 0 24px 24px;
+          -moz-border-radius: 0 0 24px 24px;
+          -ms-border-radius: 0 0 24px 24px;
+          -o-border-radius: 0 0 24px 24px;
         }
       }
     }
