--- a/src/index.scss
+++ b/src/index.scss
@@ -2,39 +2,16 @@
   box-sizing: border-box;
   font-weight: 400;
   font-style: normal;
+  letter-spacing: 0.05rem;
   color: var(--text-color);
   font-family: 'Outfit', 'Noto Sans TC', -apple-system, BlinkMacSystemFont,
     'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
-
-  transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  -webkit-transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  -moz-transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  -ms-transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-  -o-transition: 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 3rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.75rem;
-}
-h4 {
-  font-size: 1.5rem;
+  transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -webkit-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -ms-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 html {
@@ -54,9 +31,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
+  background-color: var(--background-color);
 }
 
 code {
+  letter-spacing: 0;
   font-family: 'Source Code Pro', source-code-pro, Menlo, Monaco, Consolas,
     'Courier New', monospace;
 }
@@ -65,6 +44,30 @@ li {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-align: left;
+  margin: 0;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
 }
 
 a {
@@ -80,7 +83,8 @@ a {
 }
 
 p {
-  margin: 0;
+  text-align: left;
+  margin: 6px 0;
 }
 
 input[type='text'],
