--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,6 +10,7 @@
   height: 60px;
   cursor: default;
   background-color: var(--background-color);
+  // border-bottom: 1px solid var(--border-color);
 
   > div {
     @include flexbox(row, center, center);
@@ -43,7 +44,7 @@
       @include float-label;
 
       &:global(.active) {
-        border-bottom: 3px solid var(--link-hover-color);
+        // border-bottom: 3px solid var(--link-hover-color);
 
         > svg {
           &:global(.back) {
@@ -93,6 +94,7 @@
           color: var(--text-color);
           border: none;
           border: 0px solid var(--background-color);
+          @include float-label;
           cursor: pointer;
           border-radius: 24px 24px 0 0;
           -webkit-border-radius: 24px 24px 0 0;
@@ -105,21 +107,22 @@
         > :global(.actions) {
           @include flexbox(column, center, center);
           position: absolute;
-          top: var(--header-height);
-          right: -1px;
+          width: 60px;
+          top: calc(var(--header-height) / 2);
           opacity: 0;
           background-color: var(--background-secondary-color);
-          border-left: 1px solid var(--background-color);
-          border-bottom: 1px solid var(--background-color);
+          border: 1px solid var(--background-color);
+          border-top: none;
           pointer-events: none;
           user-select: none;
 
           &:global(.active) {
             opacity: 1;
-            border-left: 1px solid var(--border-color);
-            border-bottom: 1px solid var(--border-color);
+            border: 1px solid var(--border-color);
+            border-top: none;
             pointer-events: auto;
             user-select: auto;
+            top: calc(var(--header-height) - 1px);
 
             > button {
               height: 60px;
