--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,7 @@
+@import './styles/_mixins.scss';
+
 * {
+  @include hide-scrollbar;
   box-sizing: border-box;
   font-weight: 400;
   font-style: normal;
@@ -83,8 +86,38 @@ a {
 }
 
 p {
+  font-size: 1rem;
   text-align: left;
   margin: 6px 0;
+}
+
+span {
+  font-size: 1rem;
+}
+
+div {
+  position: relative;
+}
+
+button {
+  height: 100%;
+  width: fit-content;
+  padding: 0 12px;
+  margin: 0;
+  background-color: transparent;
+  border: 1px solid var(--border-color);
+  font-size: 1rem;
+  outline: none;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+
+  border-radius: var(--space-2x);
+  -webkit-border-radius: var(--space-2x);
+  -moz-border-radius: var(--space-2x);
+  -ms-border-radius: var(--space-2x);
+  -o-border-radius: var(--space-2x);
 }
 
 input[type='text'],
