--- a/src/pages/Project/Project.module.scss
+++ b/src/pages/Project/Project.module.scss
@@ -287,20 +287,29 @@
         -o-border-radius: 18px;
       }
 
-      > img {
+      // image
+      > div {
         margin-bottom: 12px;
         width: 100%;
         height: auto;
-        border: 1px solid var(--border-color);
+        max-height: 300px;
 
         &:last-child {
           margin-bottom: 0;
         }
-        border-radius: 18px;
-        -webkit-border-radius: 18px;
-        -moz-border-radius: 18px;
-        -ms-border-radius: 18px;
-        -o-border-radius: 18px;
+
+        > img {
+          width: 100%;
+          height: 100%;
+          max-height: 300px;
+          object-fit: cover;
+          border: 1px solid var(--border-color);
+          border-radius: 18px;
+          -webkit-border-radius: 18px;
+          -moz-border-radius: 18px;
+          -ms-border-radius: 18px;
+          -o-border-radius: 18px;
+        }
       }
 
       // file
