--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -108,14 +108,26 @@
                 margin: var(--space) 0;
                 min-width: calc(100% - var(--space-8x));
                 border: 1px solid var(--border-color);
+                background-color: var(--background-color);
                 scroll-snap-align: center;
 
                 @include respond-to('phone') {
+                  // position: sticky;
+                  // right: 0;
                   margin: 0;
                   margin-right: var(--space-2x);
+                  height: fit-content;
+                  min-width: calc(100% - var(--space-2x));
+                  scroll-snap-align: center;
 
                   &:last-child {
                     margin-right: 0;
+                  }
+
+                  @for $i from 1 through 5 {
+                    &:nth-child(#{$i}) {
+                      z-index: calc(100 - ($i - 1) * 10);
+                    }
                   }
                 }
                 border-radius: 24px;
