--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -117,8 +117,10 @@
                   margin: 0;
                   margin-right: var(--space-2x);
                   height: fit-content;
+                  // max-height: calc(100vh - var(--header-height) * 2);
                   min-width: calc(100% - var(--space-2x));
                   scroll-snap-align: center;
+                  // overflow-y: auto;
 
                   &:last-child {
                     margin-right: 0;
@@ -129,6 +131,10 @@
                       z-index: calc(100 - ($i - 1) * 10);
                     }
                   }
+                }
+
+                > p {
+                  font-size: 0.9rem;
                 }
                 border-radius: 24px;
                 -webkit-border-radius: 24px;
